--- a/client/src/client/components/header/header.scss
+++ b/client/src/client/components/header/header.scss
@@ -1,6 +1,6 @@
 .header-container{
     border-bottom: 1px solid #DBDBDB;
-    background-color: #FFFFFF;
+    background: linear-gradient(to right,  #F7C5DB, #CDB7EC);
     height: 54px;
     position: fixed;
     align-items: center;
@@ -12,6 +12,7 @@
         .brand{
             font-weight: 500;
             font-size: 20px;
+            color: #881897;
         }
     }
 }
