--- a/client/src/client/screens/Catalogue/Catalogue.scss
+++ b/client/src/client/screens/Catalogue/Catalogue.scss
@@ -79,6 +79,7 @@
         height: 40px;
         align-items: center;
         border-bottom: 1px solid #DBDBDB;
+        overflow: scroll;
         .sub-category{
             border: 1px solid #DBDBDB;
             border-radius: 3px;
@@ -88,6 +89,7 @@
             &.selected{
                 border : 1px solid $primary;
             }
+            white-space: nowrap;
         }
     }
     .highlight-filters{
