--- a/client/src/client/screens/Catalogue/Catalogue.scss
+++ b/client/src/client/screens/Catalogue/Catalogue.scss
@@ -1,28 +1,6 @@
 @import "../../commons/Common.scss";
 .catalogue{
-    .loader{
-        position: fixed;
-        top: 0px;
-        width: 100%;
-        left: 0;
-        height: 54px;
-        background: linear-gradient(45deg, #F1C3DD, #ade9db, #86c5db, #D2B7EA);
-        animation: gradient 2s ease infinite;
-        -webkit-animation: gradient 2s ease infinite;
-        background-size: 400% 400%;
-        @-webkit-keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 50% 100%;
-            }
-            100% {
-                background-position: 3% 5%;
-            }
-        }
-        
-    }
+    
     .page-header{
         align-items: center;
         gap:30px;
@@ -78,7 +56,6 @@
         gap: 10px;
         height: 40px;
         align-items: center;
-        border-bottom: 1px solid #DBDBDB;
         overflow: auto;
         .sub-category{
             border: 1px solid #DBDBDB;
@@ -126,6 +103,27 @@
     }
 
     .posts{
+        .loader{
+            width: 100%;
+            height: 4px;
+            &.active{
+                background: linear-gradient(45deg, #F1C3DD, #ade9db, #86c5db, #D2B7EA);
+            }
+            animation: gradient 2s ease infinite;
+            -webkit-animation: gradient 2s ease infinite;
+            background-size: 400% 400%;
+            @-webkit-keyframes gradient {
+                0% {
+                    background-position: 0% 50%;
+                }
+                50% {
+                    background-position: 50% 100%;
+                }
+                100% {
+                    background-position: 3% 5%;
+                }
+            }
+        }
         .post-container{
             cursor: pointer;
             .post{
