--- a/client/src/client/screens/Catalogue/Catalogue.scss
+++ b/client/src/client/screens/Catalogue/Catalogue.scss
@@ -14,7 +14,10 @@
                 justify-content: center;
             }
             .pageName{
-                color: $primary;
+                color: black;
+                font-size: 1.25rem;
+                font-weight: bold;
+
             }
             .pageDesc{
                 font-size: 11px;
